--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
 		"electron": "^13.0.1"
 	},
 	"dependencies": {
-		"axios": "^0.21.1",
-		"body-parser": "^1.19.0",
-		"cors": "^2.8.5",
-		"express": "^4.17.1",
-		"youtube-dl-exec": "^1.2.3"
+		"axios": "^0.21.1"
 	}
 }
